--- a/pass.html
+++ b/pass.html
@@ -7,8 +7,9 @@
 
 <form>
     <label for="secret">Enter a phrase </label>
-    <input type ="password" id="secret" name="form1_nick"autofocus> <br>
+    <input type ="password" id="secret" name="form1_age min=10 max=50 step=2 value="Let me in"> <br>
 
+    <label for="phrase">Enter the phrase</label>
     <input type "button" onclick="processPhrase()" value="check the phrase">
 </form>
 
@@ -31,6 +32,6 @@
         }
     }
     </script>
-    
+
 </body>
 </html>
