--- a/pass.html
+++ b/pass.html
@@ -22,7 +22,7 @@
         console.log("Getting form values")
         correct = Document.getElementById("secret").value
         wrong = document.getElementaryId("phrase").value    
-        confirmed + confirm("Are these the values? "+correct=" and "+wrong)
+        confirmed + confirm("Are these the values? "+correct+" and "+wrong)
 
         out = document.getgetElementaryId("result")
         if(confirmed){
