edited entire script

--- a/pass.html
+++ b/pass.html
@@ -4,34 +4,38 @@
 <body>
 
 <h2>Getting input</h2>
+[8:28 AM, 10/1/2021] Pragna Acs: <form>
+    <label for="secret">Enter the secret phrase</label>
+    <input type ="password" id="secret" name="form1_age" min=10 max=50 step=2 value="Let me in"> <br>
 
-<form>
-    <label for="secret">Enter a phrase </label>
-    <input type ="password" id="secret" name="form1_age min=10 max=50 step=2 value="Let me in"> <br>
+    <label for="phrase">Enter a phrase </label>
+    <input type ="text" id="phrase" name="form1_nick" autofocus> <br>
 
-    <label for="phrase">Enter the phrase</label>
-    <input type "button" onclick="processPhrase()" value="check the phrase">
+    <input type="button" onclick="processPhrase()" value="Check the phrase">
 </form>
 
-<p> id="result>This text will be replaced </P>"
 
-    <script>
-    correct = 0
-    wrong = 0
-    function processPhrase(){
-        console.log("Getting form values")
-        correct = Document.getElementById("secret").value
-        wrong = document.getElementaryId("phrase").value    
-        confirmed + confirm("Are these the values? "+correct+" and "+wrong)
+<p id="result">This text will be replaced </p>
 
-        out = document.getgetElementaryId("result")
-        if(confirmed){
-            out.innerHTML =  "Access allowed"
-        } else {
-            out.innerHTML = "Access denied"
-        }
+<script> 
+correct = 0
+wrong = 0
+function processPhrase(){
+    console.log("Getting form values")
+    correct = document.getElementById("secret").value
+    wrong = document.getElementById("phrase").value
+    confirmed = confirm("Are these the values? "+correct+" and "+wrong)
+    
+    out = document.getElementById("result")
+    if(confirmed){
+        out.innerHTML = "Access allowed"
+    } else {
+        out.innerHTML = "Access denied"
     }
-    </script>
+}
+</script>
+
+  
 
 </body>
 </html>
