--- a/pass.html
+++ b/pass.html
@@ -4,7 +4,7 @@
 <body>
 
 <h2>Getting input</h2>
-[8:28 AM, 10/1/2021] Pragna Acs: <form>
+ <form>
     <label for="secret">Enter the secret phrase</label>
     <input type ="password" id="secret" name="form1_age" min=10 max=50 step=2 value="Let me in"> <br>
 
