--- a/pass.html
+++ b/pass.html
@@ -3,39 +3,67 @@
 
 <body>
 
-<h2>Getting input</h2>
- <form>
-    <label for="secret">Enter the secret phrase</label>
-    <input type ="password" id="secret" name="form1_age" min=10 max=50 step=2 value="Let me in"> <br>
+    <h2>Getting input</h2>
+    <form>
+        <label for="secret">Enter the secret phrase</label>
+        <input type="password" id="secret" name="form1_age" min=10 max=50 step=2 value="Let me in"> <br>
 
-    <label for="phrase">Enter a phrase </label>
-    <input type ="text" id="phrase" name="form1_nick" autofocus> <br>
+        <label for="phrase">Enter a phrase </label>
+        <input type="text" id="phrase" name="form1_nick" autofocus> <br>
 
-    <input type="button" onclick="processPhrase()" value="Check the phrase">
-</form>
+        <input type="button" onclick="processPhrase()" value="Check the phrase">
+    </form>
 
 
-<p id="result">This text will be replaced </p>
+    <p> This text will be replaced </p>
 
-<script> 
-correct = 0
-wrong = 0
-function processPhrase(){
-    console.log("Getting form values")
-    correct = document.getElementById("secret").value
-    wrong = document.getElementById("phrase").value
-    confirmed = confirm("Are these the values? "+correct+" and "+wrong)
-    
-    out = document.getElementById("result")
-    if(confirmed){
-        out.innerHTML = "Access allowed"
-    } else {
-        out.innerHTML = "Access denied"
-    }
-}
-</script>
+    <div class="container">
+        <h3>Animal Image</h3>
+        <img src="images/Elephant_Diversity.jpg" onClick="rotateImage()" id="image" alt="Elephant" width="200"
+            height="200">
+    </div>
 
-  
+    <script>
+        correct = 0
+        wrong = 0
+        var currentImage = 0;
+        image = document.getElementById("image");
+        function processPhrase() {
+            console.log("Getting form values")
+            correct = document.getElementById("secret").value
+            wrong = document.getElementById("phrase").value
+            confirmed = confirm("Are these the values? " + correct + " and " + wrong)
+
+            out = document.getElementById("result")
+            if (confirmed) {
+                out.innerHTML = "Access allowed"
+            } else {
+                out.innerHTML = "Access denied"
+            }
+        }
+
+        function rotateImage() {
+            switch (currentImage) {
+                case 0:
+                    image.setAttribute('src', 'images/hen.jpg');
+                    currentImage = currentImage + 1;
+                    break;
+                case 1:
+                    image.setAttribute('src', 'images/Lion_waiting_in_Namibia.jpg');
+                    currentImage = currentImage + 1;
+                    break;
+                case 2:
+                    image.setAttribute('src', 'images/Elephant_Diversity.jpg');
+                    currentImage = 0;
+                    break;
+            }
+        }
+
+
+    </script>
+
+
 
 </body>
+
 </html>
