--- a/car.html
+++ b/car.html
@@ -47,6 +47,18 @@
         <input type="button" onclick="orderCar()" value="Order a car">
     </form>
     <p id="result">This text will be replaced </p>
+    <hr>
+    <form>
+        <label for="form1_prop">Enter a property </label>
+        <input type="text" id="form1_prop" name="form1_prop" value=color> <br>
+
+        <label for="form1_propValue">Enter a value </label>
+        <input type="text" id="form1_propValue" name="form1_propValue"> <br>
+
+        <input type="button" onclick="updateCar()" value="Update the car">
+    </form>
+    <p id="res">This text will be replaced </p>
+    <hr>
     <script>
         var my_car = {}
         out = document.getElementById("result")
@@ -72,6 +84,12 @@
             result.innerHTML = result.innerHTML + "\n" + "gps: " + my_car.gps;
         }
         out = document.getElementById("result")
+        function updateCar() {
+            var pa = document.getElementById("form1_prop").value;
+            var sa = document.getElementById("form1_propValue").value;
+            my_car[pa] = sa;
+            res.innerHTML = "my_car[]=  " + JSON.stringify(my_car);
+        }
     </script>
 </body>
 
