updated logic for bonus

--- a/pass.html
+++ b/pass.html
@@ -42,7 +42,7 @@
                 wrong = wrong + 1;
                 out.innerHTML = "correct " + correct + ",Wrong " + wrong;
             }
-            if( wrong ==3){
+            if( wrong >=3){
                 locked();
             }
         }
